--- a/server_list.yml
+++ b/server_list.yml
@@ -12,4 +12,4 @@
 
     - name: print hostvars tz
       debug:
-        msg: "{{ hostvars[date_time][tz] }}"
+        msg: "{{ hostvars[ansible_facts][date_time][tz] }}"
