--- a/server_list.yml
+++ b/server_list.yml
@@ -4,6 +4,11 @@
   become: yes
   remote_user: automation
   tasks:
+    - name: delete /etc/server_list.txt
+      file:
+        path: /etc/server_list.txt
+        state: absent
+
     - name: print ansible_play_hosts
       template:
         src: server_list_template.j2
