--- a/register-device-info-parted.yml
+++ b/register-device-info-parted.yml
@@ -5,6 +5,10 @@
   remote_user: automation
   gather_facts: no
   tasks:
+    - name: facts variation
+      debug:
+        msg: "{{ ansible_facts }}"
+
     - name: register info in device_info
       parted: device=/dev/vdb unit=MiB
       register: device_info
