- name: create partition # 3

--- a/register-device-info-parted.yml
+++ b/register-device-info-parted.yml
@@ -16,3 +16,20 @@
     - name: show device info
       debug:
         msg: "{{ device_info }}"
+
+    - name: create partition # 3
+      parted: device=/dev/vdb unit=MiB
+      fs_type: ext4
+      number: 3
+      part_type: primary
+      part_start: 1954.0
+      part_end: 3072
+      state: present
+
+    - name: register info in device_info
+      parted: device=/dev/vdb unit=MiB
+      register: device_info
+
+    - name: show device info
+      debug:
+        msg: "{{ device_info }}"        
