--- a/register-device-info-parted.yml
+++ b/register-device-info-parted.yml
@@ -5,9 +5,9 @@
   remote_user: automation
   gather_facts: yes
   tasks:
-    - name: facts variation
-      debug:
-        msg: "{{ ansible_facts }}"
+    #- name: facts variation
+    #  debug:
+    #    msg: "{{ ansible_facts }}"
 
     - name: register info in device_info
       parted: device=/dev/vdb unit=MiB
