--- a/register-device-info-parted.yml
+++ b/register-device-info-parted.yml
@@ -10,7 +10,7 @@
     #    msg: "{{ ansible_facts }}"
 
     - name: register info in device_info
-      parted: device=/dev/vdb unit=MiB
+      parted: device=/dev/vdb unit=s
       register: device_info
 
     - name: show device info
@@ -29,7 +29,7 @@
         state: present
 
     - name: register info in device_info
-      parted: device=/dev/vdb unit=MiB
+      parted: device=/dev/vdb unit=s
       register: device_info
 
     - name: show device info
