- name: Collect facts about installed iSCSI initiator

--- a/roles/show-facts-10/tasks/main.yml
+++ b/roles/show-facts-10/tasks/main.yml
@@ -1,3 +1,6 @@
+    - name: Collect facts about installed iSCSI initiator
+      iscsiadm_facts:
+
     - name: custom fact
       setup:
         filter: ansible_local
