--- a/discovering-iscsi-target.yml
+++ b/discovering-iscsi-target.yml
@@ -5,6 +5,6 @@
   remote_user: automation
   vars_files: secret.yml
   roles:
-    - ondrejhome.iscsiadm
+    - OndrejHome.iscsiadm
   vars:
     iscsi_target_ip: 192.168.128.8
