#  client2.ipa.vm:

--- a/inventory.yml
+++ b/inventory.yml
@@ -13,7 +13,7 @@ all:
 
     webservers:
       hosts:
-        client2.ipa.vm:
+      #  client2.ipa.vm:
         client3.ipa.vm:
       vars:
         proxy: no
