--- a/roles/firewalld_common/tasks/manage_firewalld_zone.yml
+++ b/roles/firewalld_common/tasks/manage_firewalld_zone.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Get current zone status
-  shell: /bin/firewall-cmd --list-all-zones | grep -q "^{{ zone.name }}" && echo configured || echo not-configured
+  shell: /bin/firewall-cmd --list-all-zones | grep -q "^{{ zone.name }}" && echo configuredd || echo not-configured
   register: zone_status
   changed_when: false
 
