--- a/roles/geerlingguy.apache/tasks/main.yml
+++ b/roles/geerlingguy.apache/tasks/main.yml
@@ -15,7 +15,7 @@
   when: apache_packages is not defined
 
 # Setup/install tasks.
-- include_tasks: "setup-{{ ansible_os_family }}.yml"
+#- include_tasks: "setup-{{ ansible_os_family }}.yml"
 
 # Figure out what version of Apache is installed.
 - name: Get installed version of Apache.
@@ -37,11 +37,11 @@
   when: "apache_version.split('.')[1] == '4'"
 
 # Configure Apache.
-- name: Configure Apache.
-  include_tasks: "configure-{{ ansible_os_family }}.yml"
+#- name: Configure Apache.
+#  include_tasks: "configure-{{ ansible_os_family }}.yml"
 
-- name: Ensure Apache has selected state and enabled on boot.
-  service:
-    name: "{{ apache_service }}"
-    state: "{{ apache_state }}"
-    enabled: true
+#- name: Ensure Apache has selected state and enabled on boot.
+#  service:
+#    name: "{{ apache_service }}"
+#    state: "{{ apache_state }}"
+#    enabled: true
