--- a/roles/geerlingguy.apache/tasks/main.yml
+++ b/roles/geerlingguy.apache/tasks/main.yml
@@ -32,6 +32,10 @@
   set_fact:
     apache_version: "{{ _apache_version.stdout.split()[2].split('/')[1] }}"
 
+- name: show apache_version
+  debug:
+    var: apache_version
+
 - name: Include Apache 2.2 variables.
   include_vars: apache-22.yml
   when: "apache_version.split('.')[1] == '2'"
