--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,7 +10,7 @@
 [defaults]
 
 # some basic default values...
-
+vault_identity_list = ansible_exam@~/.vault_key
 #inventory      = /etc/ansible/hosts
 inventory      = /home/automation/plays/inventory.yml
 #library        = /usr/share/my_modules/
@@ -66,7 +66,7 @@ forks          = 10
 # inject_facts_as_vars = True
 
 # additional paths to search for roles in, colon separated
-roles_path    = /etc/ansible/roles:/home/automation/plays/roles
+roles_path    = /etc/ansible/roles:/home/automation/plays/roles:/usr/share/ansible/roles/
 
 # uncomment this to disable SSH key host checking
 #host_key_checking = False
