ipaserver_setup_dns: yes

--- a/inventory.yml
+++ b/inventory.yml
@@ -29,6 +29,7 @@ all:
         ipaadmin_password: 123456789
         ipaserver_realm: IPA.VM
         ipaserver_domain: ipa.vm
+        ipaserver_setup_dns: yes
 
     test:
       hosts:
