--- a/inventory.yml
+++ b/inventory.yml
@@ -25,8 +25,8 @@ all:
         1st.ipa.vm:
         #  ansible_connection: local
       vars:
-        ipaadmin_password: 123456789
-        ipadm_password: 123456789
+      #  ipaadmin_password: 123456789
+      #  ipadm_password: 123456789
         ipaserver_realm: IPA.VM
         ipaserver_domain: ipa.vm
         ipaserver_setup_dns: yes
