--- a/inventory.yml
+++ b/inventory.yml
@@ -39,6 +39,7 @@ all:
       vars:
         ipaadmin_principal: admin
         ipaclient_domain: ipa.vm
+        ipaservers: 1st.ipa.vm
 
     test:
       hosts:
