--- a/handle-vault.yml
+++ b/handle-vault.yml
@@ -11,7 +11,7 @@
       username: admin
       password: devops
       state: retrieved
-    no_log: yes
+    no_log: no
     register: ipavault
 
   - name: Print retrieved data from vault
