--- a/ipa-delete-host.yml
+++ b/ipa-delete-host.yml
@@ -1,7 +1,7 @@
 ---
 - name: Playbook to handle hosts
   hosts: ipaserver
-  vars_files: secret.yml
+  vars_files: plays/secret.yml
   become: true
 
   tasks:
