ipaclients: #  ipaadmin_password: 123456789       #  ipadm_password: 123456789         ipaserver_realm: IPA.VM         ipaserver_domain: ipa.vm         ipaserver_setup_dns: yes         ipaserver_auto_forwarders: yes

--- a/inventory.yml
+++ b/inventory.yml
@@ -40,6 +40,12 @@ all:
         ipaadmin_principal: admin
         ipaclient_domain: ipa.vm
         ipaclient_servers: 1st.ipa.vm
+        ipaadmin_password: 123456789
+        ipadm_password: 123456789
+        ipaserver_realm: IPA.VM
+        ipaserver_domain: ipa.vm
+        ipaserver_setup_dns: yes
+        ipaserver_auto_forwarders: yes
 
     test:
       hosts:
