ipaclient_servers: 4th.ipa.vm

--- a/inventory.yml
+++ b/inventory.yml
@@ -39,7 +39,7 @@ all:
       vars:
         ipaadmin_principal: admin
         ipaclient_domain: ipa.vm
-        ipaclient_servers: 1st.ipa.vm
+        ipaclient_servers: 4th.ipa.vm
         ipaadmin_password: 123456789
         ipadm_password: 123456789
         ipaserver_realm: IPA.VM
